--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "casapro-backend",
   "version": "1.0.0",
+  "description": "CasaPro SaaS Backend",
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -16,6 +20,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
