--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,54 +1,37 @@
-import { config } from 'dotenv';
-
-config();
-
-const requiredEnvVars = [
-  'DATABASE_URL',
-  'JWT_SECRET'
-] as const;
-
-type RequiredEnvVar = typeof requiredEnvVars[number];
-
-interface EnvConfig {
-  NODE_ENV: 'development' | 'production' | 'test';
-  PORT: number;
-  DATABASE_URL: string;
-  JWT_SECRET: string;
-  JWT_EXPIRES_IN: string;
-  BCRYPT_ROUNDS: number;
-  RATE_LIMIT_WINDOW_MS: number;
-  RATE_LIMIT_MAX_REQUESTS: number;
-  CORS_ORIGIN: string;
+{
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "commonjs",
+    "lib": ["ES2022"],
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@config/*": ["src/config/*"],
+      "@core/*": ["src/core/*"],
+      "@modules/*": ["src/modules/*"]
+    },
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "removeComments": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
-
-function getEnvVar(key: RequiredEnvVar): string {
-  const value = process.env[key];
-  if (!value) {
-    throw new Error(`Environment variable ${key} is required`);
-  }
-  return value;
-}
-
-function parseIntEnv(key: string, defaultValue: number): number {
-  const value = process.env[key];
-  if (!value) return defaultValue;
-  const parsed = parseInt(value, 10);
-  if (isNaN(parsed)) {
-    throw new Error(`Environment variable ${key} must be a valid number`);
-  }
-  return parsed;
-}
-
-export const env: EnvConfig = {
-  NODE_ENV: (process.env.NODE_ENV as EnvConfig['NODE_ENV']) || 'development',
-  PORT: parseInt(process.env.PORT || '3000', 10),
-  DATABASE_URL: getEnvVar('DATABASE_URL'),
-  JWT_SECRET: getEnvVar('JWT_SECRET'),
-  JWT_EXPIRES_IN: process.env.JWT_EXPIRES_IN || '7d',
-  BCRYPT_ROUNDS: parseIntEnv('BCRYPT_ROUNDS', 12),
-  RATE_LIMIT_WINDOW_MS: parseIntEnv('RATE_LIMIT_WINDOW_MS', 900000),
-  RATE_LIMIT_MAX_REQUESTS: parseIntEnv('RATE_LIMIT_MAX_REQUESTS', 100),
-  CORS_ORIGIN: process.env.CORS_ORIGIN || '*'
-};
-
-export default env;
