--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,22 @@
-# CasaPro 5.0 Backend Environment Variables
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/casapro
 
-# Server Configuration
-NODE_ENV=development
-PORT=3000
-
-# Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/casapro_db
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-min-32-characters-long
+# JWT
+JWT_SECRET=your-super-secret-jwt-key-min-32-chars
 JWT_EXPIRES_IN=7d
 
-# Security Configuration
-BCRYPT_ROUNDS=12
+# Server
+PORT=3000
+NODE_ENV=development
 
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# CORS Configuration
+# CORS
 CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 
-# Optional: Logging Level
-# LOG_LEVEL=debug
+# Stripe (obrigatório para SaaS)
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+STRIPE_PRO_PRICE_ID=price_...
+STRIPE_ENTERPRISE_PRICE_ID=price_...
+
+# Frontend URL (para redirecionamentos)
+FRONTEND_URL=http://localhost:5173
